HelloUltraviolet/Fixtures/RejectedSource/Expressions/AddressOfStaticHelpers/Expected.uv
//! Expected diagnostic metadata for the AddressOfStaticHelpers rejected-source specimen.

expectedDiagnostic("E-TYP-2105", "def.16.AddressOfStaticHelpers")
